<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zenghong.myapplication.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <EditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_etUser" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_etPassword"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_etPhone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_etAge"
                android:inputType="number" />

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btSubmit"
                android:onClick="onSubmitClick"/>

            <Button
                android:id="@+id/btClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btClear" />

            <Button
                android:id="@+id/btGotoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoLogin"
                android:onClick="gotoLoginPage"/>

            <Button
                android:id="@+id/btGotoSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoSecond"
                android:onClick="gotoSecondPage"/>

            <Button
                android:id="@+id/btGotoThird"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoThirdd"
                android:onClick="gotoThirdPage"/>

            <Button
                android:id="@+id/btGotoFourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoFourth"
                android:onClick="gotoFourthPage"/>

            <Button
                android:id="@+id/btGotoFifth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoFifth"
                android:onClick="gotoFifthPage"/>

            <Button
                android:id="@+id/btGotoSixth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoSixth"
                android:onClick="gotoSixthPage"/>

            <Button
                android:id="@+id/btGotoSeventh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoSeventh"
                android:onClick="gotoSeventhPage"/>

            <Button
                android:id="@+id/btGotoEighth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoEighth"
                android:onClick="gotoEighthPage"/>

            <Button
                android:id="@+id/btGotoNighth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoNighth"
                android:onClick="gotoNighthPage"/>

            <Button
                android:id="@+id/btGotoTenth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_btGotoTenth"
                android:onClick="gotoTenthPage"/>

            <TextView
                android:id="@+id/tvMessage"
                android:lines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#ddddff"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
